--- a/src/pages/_layout/_scripts.pug
+++ b/src/pages/_layout/_scripts.pug
@@ -1,5 +1,5 @@
 script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3') 
-include _gmap-api
+//- include _gmap-api
 script(src="./js/core.min.js")
 script(src="./js/main.min.js")
 script(src="./js/gmap.min.js")
