--- a/_vendor/loading.css
+++ b/_vendor/loading.css
@@ -43,6 +43,8 @@
 }
 
 #loading .logo-loader {
+	width: 300px;
+	height: 300px;
 	-webkit-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	position: absolute;
@@ -50,6 +52,4 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	margin-top: -100px;
-	width: 150px;
-	height: 150px
 }
