--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -1,3 +1,4 @@
 @import "_core/core.scss";
 @import "_global/header.scss";
 @import "_global/footer.scss";
+@import "distribution-system/distribution-system.scss";
