--- a/src/components/distribution-system/distribution-system.pug
+++ b/src/components/distribution-system/distribution-system.pug
@@ -55,3 +55,4 @@ section.distribution-system
 							p.address Khu thể thao, công viên Khánh Hội, đường 48, phường 3
 							p.phone 18006968
 			.col-lg-7
+				#map
