--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -2,3 +2,4 @@
 @import "_global/header.scss";
 @import "_global/footer.scss";
 @import "distribution-system/distribution-system.scss";
+@import "nav-left/nav-left.scss";
