--- a/src/pages/_layout/_scripts.pug
+++ b/src/pages/_layout/_scripts.pug
@@ -1,5 +1,5 @@
 script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3') 
-//- include _gmap-api
+script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyCHvmyTralDp2Y0m7zEiN185u1vtArcC5s&libraries=places")
 script(src="./js/core.min.js")
 script(src="./js/main.min.js")
 script(src="./js/gmap.min.js")
