--- a/src/components/_global/footer.pug
+++ b/src/components/_global/footer.pug
@@ -2,7 +2,8 @@ footer
 	.container
 		.row
 			.content-left.col-lg-8
-				img(src="./img/logo.png", alt="Logo Motul")
+				a(href="index.html")
+					img(src="./img/logo.png", alt="Logo Motul")
 				span Copyright @2019 Công ty CP Dầu nhớt và Hóa chất Việt Nam
 			.content-right.col-lg-4
 				ul.social-media
