--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -1,5 +1,8 @@
 @import "_core/core.scss";
-@import "_global/header.scss";
+@import "_global/header_1.scss";
+@import "_global/header_2.scss";
 @import "_global/footer.scss";
 @import "distribution-system/distribution-system.scss";
 @import "nav-left/nav-left.scss";
+@import "list-oil.scss";
+@import "list-car.scss";
