--- a/src/components/nav-left/nav-left.pug
+++ b/src/components/nav-left/nav-left.pug
@@ -1,7 +1,13 @@
 aside
-	.main-info-box
-		.content
-			h3 Xe Hơi
-			p Tên thương hiệu
-	.box-search
-		p Tìm tên xe hơi
+	.block.text-center
+		h3 Xe Hơi
+		p Tên thương hiệu
+	.block.mt-18
+		.box-search
+			span Tìm tên xe hơi
+			.form-group
+				input(type="text" placeholder="Tìm...")
+				button
+					img(src="./img/icons/icon_search.png", alt="", srcset="")
+	a.back-link(href="index.html")
+		.block.mt-18.back-button Quay Lại
