--- a/src/pages/list-oil.pug
+++ b/src/pages/list-oil.pug
@@ -1,10 +1,179 @@
-extends _layout/_layout.pug
+extends _layout/_layout_2.pug
 
 block var
 	- var title = 'Danh Sách Sản Phẩm'
 	- var bodyClass = 'list-product-page'
 block main
-	.container
-		.row
-			.col-lg-3
-				include ../components/nav-left/nav-left.pug
+	section.list-products-oil
+		.container
+			.row
+				//- MENU BÊN TRÁI
+				.col-lg-3
+					include ../components/nav-left/nav-left.pug
+				//- DANH SÁCH SẢN PHẨM
+				.col-lg-9
+					.block.list-oil
+						h3.name-catalogs Dầu nhớt động cơ
+						.row.list-item
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+					.block.list-oil.mt-25
+						h3.name-catalogs Dầu nhớt số sàn
+						.row.list-item
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+					.block.list-oil.mt-25
+						h3.name-catalogs ATF / CVTF / DCTF
+						.row.list-item
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_02.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_02.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_03.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_03.png", alt="")
+							.col-lg-4.col-6.item
+								a(href="#")
+									figure
+										figcaption
+											h5 H-TECH100PLUS_0W20
+										.box-img
+											img(src="./img/product_01.png", alt="")
