--- a/src/components/_core/core.scss
+++ b/src/components/_core/core.scss
@@ -5,7 +5,6 @@ body {
 }
 
 body {
-	padding-top        : 90px;
 	background-image   : url('../img/background.png');
 	background         : #F2F2F2;
 	background-size    : cover;
@@ -29,4 +28,104 @@ body {
 	box-shadow        : inset 0 0 6px rgba(255, 255, 255, 0);
 	-webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0);
 	background-color  : #ED1D24;
+}
+
+.block {
+	border: 5px solid #ED1D24;
+
+	&.menu {
+		display        : flex;
+		justify-content: center;
+		align-self     : center;
+		align-items    : center;
+		border         : 9px solid #ED1D24;
+		color          : #ED1D24;
+		height         : 85px;
+		user-select    : none;
+
+		p {
+			position     : relative;
+			padding-right: 35px;
+
+			&::after {
+				content          : '';
+				position         : absolute;
+				background-image : url(../img/icons/next-arrows.png);
+				background-repeat: no-repeat;
+				background-size  : cover;
+				top              : 50%;
+				right            : 0;
+				width            : 26px;
+				height           : 26px;
+				transform        : translateY(-50%);
+			}
+		}
+
+		@media(max-width: 1024px) {
+			border    : 3px solid #ED1D24;
+			height    : 38px;
+			margin-top: 10px;
+
+			p {
+				padding-right: 30px;
+
+				&:after {
+					width : 16px;
+					height: 16px;
+				}
+			}
+
+			&.title-logo {
+				margin-top: 0px;
+				height    : 58px;
+			}
+		}
+	}
+
+	&.text-center {
+		display        : flex;
+		flex-wrap      : wrap;
+		justify-content: center;
+		align-self     : center;
+		align-items    : center;
+	}
+
+	&.mt-18 {
+		margin-top: 18px;
+	}
+
+	&.mt-25 {
+		margin-top: 25px;
+	}
+
+	&.list-oil {
+		background         : #fff;
+		background-image   : url(../img/background-list-oil.png);
+		background-position: top;
+		padding-bottom     : 50px;
+	}
+
+	&.item-detail {
+		background         : #fff;
+		background-image   : url(../img/background_item_detail.png);
+		background-position: center;
+		padding            : 43px;
+	}
+
+	&.display-none {
+		display: none;
+	}
+
+	@media(max-width: 1024px) {
+		border: 3px solid #ED1D24;
+
+		&.list-oil {
+			margin-top: 10px;
+		}
+
+		&.item-detail {
+			padding   : 15px 0;
+			margin-top: 10px;
+		}
+	}
 }
