--- a/src/components/_global/header_2.pug
+++ b/src/components/_global/header_2.pug
@@ -1,16 +1,16 @@
-header
+header.header_2
 	.container
-		.row.no-gutters
-			a(href="index.html")
-				figure.logo
-					img(src="./img/logo.png", alt="Logo Motul")
-			.mobile-toggle#mobile-toggle
-				.button_toggle
-					.line#btn_line1
-					.line.line2#btn_line2
-					.line#btn_line3
-			ul.list-menu
-				li.item-menu
-					a(href="index.html") MOTUL VIỆT NAM
-				li.item-menu
-					a(href="list-oil.html") CHỌN DẦU NHỚT
+		.row
+			.col-lg-6
+				a(href="list-oil.html")
+					.block.menu
+						h2 MOTUL Oil Selector 
+							span Chọn dầu nhớt
+			.col-lg-3.col-6
+				a(href="list-oil.html")
+					.block.menu
+						p Danh sách sản phẩm
+			.col-lg-3.col-6
+				a(href="index.html")
+					.block.menu
+						p Tìm cửa hàng
