--- a/src/components/_global/header_2.scss
+++ b/src/components/_global/header_2.scss
@@ -1,142 +1,53 @@
-header {
-	position  : fixed;
-	top       : 0;
-	width     : 100%;
-	padding   : 15px 0;
-	background: #191919;
-	z-index   : 100;
+.header_2 {
+	margin: 15px 0;
 
-	&.active {
-		box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
-	}
+	h2 {
+		font-size  : 36px;
+		font-weight: 700;
 
-
-	// NÚT MOBILE
-	.mobile-toggle {
-		display   : none;
-		position  : absolute;
-		right     : 35px;
-		bottom    : 16px;
-		width     : 43px;
-		height    : 38px;
-		cursor    : pointer;
-		z-index   : 40;
-		transition: all 500ms;
-
-		.button_toggle {
-			position: relative;
-
-			.line {
-				position  : absolute;
-				top       : 0;
-				display   : block;
-				content   : '';
-				width     : 23px;
-				right     : 15px;
-				height    : 3px;
-				background: #ED1D24;
-				transition: all .25s ease-in-out;
-
-				&:nth-child(2) {
-					top  : 8px;
-					width: 23px;
-				}
-
-				&:nth-child(3) {
-					top: 16px;
-				}
-			}
-
-			.line-close-1 {
-				-webkit-transform: rotate(45deg) translate(12px, 0);
-				-ms-transform    : rotate(45deg) translate(12px, 0);
-				transform        : rotate(45deg) translate(12px, 0);
-			}
-
-			.line-close-3 {
-				-webkit-transform: rotate(-45deg) translate(10px, 0);
-				-ms-transform    : rotate(-45deg) translate(10px, 0);
-				transform        : rotate(-45deg) translate(10px, 0);
-			}
-
-			.line_hidden {
-				opacity: 0;
-			}
+		span {
+			font-size: 18px;
 		}
 	}
 
-	// LIST MENU PC
+	a {
+		font-size  : 18px;
+		font-weight: 700;
+	}
+
 	.list-menu {
-		height    : 100%;
-		display   : block;
-		list-style: none;
-
-		.item-menu {
-			padding   : 0 5px;
-			flex-basis: 0;
-			flex-grow : 1;
-			width     : 228px;
-			float     : left;
-
-			a {
-				display       : block;
-				width         : 100%;
-				text-align    : center;
-				font-size     : 14px;
-				line-height   : 60px;
-				color         : #FFFFFF;
-				background    : #353535;
-				text-transform: uppercase;
-				font-weight   : bold;
-				transition    : .3s all ease-in-out;
-			}
-
-			&:hover {
-				a {
-					background: #ED1D24;
-				}
-			}
-		}
+		align-items: center;
 	}
 }
 
 @media(max-width: 1024px) {
-	header {
-		.container {
-			padding: 0;
-		}
+	.header_2 {
 
-		.mobile-toggle {
-			display: block;
-		}
+		h2 {
+			font-size: 18px;
 
-		.logo {
-			padding-left: 35px;
-		}
-
-		.list-menu {
-			background : #353535;
-			display    : block;
-			position   : fixed;
-			margin-left: unset;
-			width      : 100%;
-			height     : 100vh;
-			top        : 90px;
-			left       : -100%;
-			transition : .3s all ease-in-out;
-
-			&.active {
-				left: 0;
+			span {
+				font-size: 12px;
 			}
+		}
 
-			.item-menu {
-				padding: 0;
-				width  : 100%;
+		p {
+			font-size: 12px;
 
-				a {
-					padding-left: 35px;
-					text-align  : left;
-				}
+			&:after {
+				width : 15px;
+				height: 15px;
+			}
+		}
+
+		.row {
+			margin-left : -5px;
+			margin-right: -5px;
+
+			.col-6,
+			.col-lg-6 {
+				padding-left : 5px;
+				padding-right: 5px;
 			}
 		}
 	}
