--- a/src/components/distribution-system/distribution-system.scss
+++ b/src/components/distribution-system/distribution-system.scss
@@ -1,4 +1,6 @@
 .distribution-system {
+	padding-top: 90px;
+
 	h1 {
 		margin     : 50px 0;
 		font-size  : 72px;
@@ -160,5 +162,20 @@
 
 	#map {
 		height: 100%;
+	}
+}
+
+@media(max-width: 1024px) {
+	.distribution-system {
+		h1 {
+			font-size : 32px;
+			text-align: center;
+			margin    : 35px 0 40px;
+		}
+
+		#map {
+			margin-top: 25px;
+			height    : 535px;
+		}
 	}
 }
