--- a/src/components/nav-left/nav-left.scss
+++ b/src/components/nav-left/nav-left.scss
@@ -1,38 +1,123 @@
 aside {
-	.main-info-box {
-		display      : flex;
-		flex-wrap    : wrap;
-		height       : 110px;
-		border       : 5px solid #ED1D24;
-		text-align   : center;
-		margin-bottom: 15px;
 
-		.content {
-			flex      : 0 0 100%;
-			align-self: center;
+	h3,
+	p {
+		text-align : center;
+		flex       : 0 0 100%;
+		max-width  : 100%;
+		font-weight: 700;
+	}
 
-			h3 {
-				font-size  : 24px;
-				color      : #000000;
-				font-weight: 700;
-			}
+	h3 {
+		color    : #000;
+		font-size: 24px;
+	}
 
-			p {
-				font-size  : 16px;
-				color      : #ED1D24;
-				font-weight: 700;
-			}
-		}
+	p {
+		font-size: 16px;
+		color    : #ED1D24;
 	}
 
 	.box-search {
-		border : 5px solid #ED1D24;
-		padding: 15px;
+		justify-content: flex-start;
+		padding        : 15px;
 
+		span {
+			display      : inline-block;
+			font-size    : 18px;
+			color        : #ED1D24;
+			font-weight  : 700;
+			margin-bottom: 15px;
+		}
+
+		.form-group {
+			position: relative;
+
+			input[type="text"] {
+				font-size: 18px;
+				padding  : 10px;
+				width    : 100%;
+				border   : 1px solid #AFAFAF;
+			}
+
+			button {
+				position  : absolute;
+				right     : 10px;
+				top       : 50%;
+				transform : translateY(-50%);
+				border    : none;
+				background: transparent;
+			}
+		}
+
+	}
+
+	.back-button {
+		position   : relative;
+		padding    : 6px;
+		text-align : center;
+		font-size  : 18px;
+		color      : #ED1D24;
+		font-weight: 700;
+
+		&::before {
+			position         : absolute;
+			content          : '';
+			background-image : url(../img/icons/prev-arrows.png);
+			background-size  : cover;
+			background-repeat: no-repeat;
+			width            : 26px;
+			height           : 26px;
+			top              : 50%;
+			transform        : translateY(-50%);
+			left             : 22px;
+		}
+	}
+}
+
+@media(max-width: 1024px) {
+	aside {
+		.back-link {
+			display: none;
+		}
+
+		h3,
 		p {
-			font-size  : 18px;
-			color      : #ED1D24;
-			font-weight: 700;
+			flex     : 0 0 50%;
+			max-width: 50%;
+		}
+
+		h3 {
+			font-size: 18px;
+		}
+
+		P {
+			font-size: 12px;
+		}
+
+		.box-search {
+			display    : flex;
+			flex-wrap  : wrap;
+			align-self : center;
+			align-items: center;
+			padding    : 5px;
+
+			span {
+				flex         : 0 0 30%;
+				max-width    : 30%;
+				font-size    : 12px;
+				margin-bottom: 0;
+			}
+
+			.form-group {
+				flex     : 0 0 70%;
+				max-width: 70%;
+
+				input[type="text"] {
+					height   : 25px;
+					font-size: 9px;
+				}
+			}
 		}
 	}
 }
