--- a/src/components/_global/header_1.pug
+++ b/src/components/_global/header_1.pug
@@ -11,6 +11,6 @@ header.header_1
 					.line#btn_line3
 			ul.list-menu
 				li.item-menu
-					a(href="index.html") MOTUL VIỆT NAM
+					a(href="#") MOTUL VIỆT NAM
 				li.item-menu
-					a(href="list-oil.html") CHỌN DẦU NHỚT
+					a(href="index.html") CHỌN DẦU NHỚT
