--- a/src/components/_global/header_2.pug
+++ b/src/components/_global/header_2.pug
@@ -2,7 +2,7 @@ header.header_2
 	.container
 		.row
 			.col-lg-6
-				a(href="list-oil.html")
+				a(href="index.html")
 					.block.menu
 						h2 MOTUL Oil Selector 
 							span Chọn dầu nhớt
@@ -11,6 +11,6 @@ header.header_2
 					.block.menu
 						p Danh sách sản phẩm
 			.col-lg-3.col-6
-				a(href="index.html")
+				a(href="system.html")
 					.block.menu
 						p Tìm cửa hàng
