--- a/src/pages/list-car.pug
+++ b/src/pages/list-car.pug
@@ -1,8 +1,8 @@
 extends _layout/_layout_2.pug
 
 block var
-	- var title = 'Danh Sách Sản Phẩm'
-	- var bodyClass = 'list-product-page'
+	- var title = 'Danh Sách Xe'
+	- var bodyClass = 'list-car-page'
 block main
 	section.list-car
 		.container
@@ -15,19 +15,19 @@ block main
 					.block.item-detail
 						ul.list-car
 							li.item
-								a(href="#") Toyota
+								a(href="catalog-oil.html") Toyota
 							li.item
-								a(href="#") Nissan
+								a(href="catalog-oil.html") Nissan
 							li.item
-								a(href="#") Subaru
+								a(href="catalog-oil.html") Subaru
 							li.item
-								a(href="#") Honda
+								a(href="catalog-oil.html") Honda
 							li.item
-								a(href="#") Mazdaz
+								a(href="catalog-oil.html") Mazdaz
 							li.item
-								a(href="#") Misubishi
+								a(href="catalog-oil.html") Misubishi
 							li.item
-								a(href="#") Isuzu
+								a(href="catalog-oil.html") Isuzu
 					.note
 						p * Hiện thông tin các dòng xe hơi khác và sản phẩm Motul thích hợp tương ứng cho từng dòng xe đang được cập nhật.
 						p * Mọi thông tin về sản phẩm vui lòng liên hệ đến đại lý phân phối Motul chính hãng gần nhất hoặc văn phòng Motul Việt Nam qua số (+84)28 3513 6015 - 3513026.
