--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -2,7 +2,7 @@
 @import "_global/header_1.scss";
 @import "_global/header_2.scss";
 @import "_global/footer.scss";
+@import "index.scss";
 @import "distribution-system/distribution-system.scss";
 @import "nav-left/nav-left.scss";
-@import "list-oil.scss";
-@import "list-car.scss";
+@import "choose-oil.scss";
