--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -10,6 +10,7 @@ block main
 			.block.size-9
 				.row
 					.col-lg-7.box-content
+						img(src="./img/img-banner-mobile.png", alt="")
 						p Mỗi dòng xe đều cần dầu nhớt chuyên dụng để phát huy tối đa công suất vận hành của động cơ.
 						p * Chọn thông tin của xe để tìm kiếm sản phẩm dầu nhớt MOTUL thích hợp nhất cho xe của bạn.
 						.box-title
