--- a/src/components/_global/footer.scss
+++ b/src/components/_global/footer.scss
@@ -17,6 +17,7 @@ footer {
 		align-self: flex-end;
 
 		.social-media {
+			padding        : 0;
 			display        : flex;
 			justify-content: flex-end;
 			list-style     : none;
