--- a/src/components/choose-oil.scss
+++ b/src/components/choose-oil.scss
@@ -204,7 +204,7 @@
 .car-version {
 	.table-car_version {
 
-		table {
+		.table-pc {
 			width: 100%;
 
 			tr {
@@ -251,6 +251,10 @@
 				}
 			}
 
+		}
+
+		.table-mb {
+			display: none;
 		}
 	}
 
@@ -350,6 +354,8 @@
 	}
 
 	.list-car {
+		padding: 0;
+
 		.item {
 			margin-bottom: 0;
 			padding      : 15px 0 15px 10px;
@@ -383,7 +389,7 @@
 		}
 	}
 
-	.list-products-oil {
+	.list-oil {
 		.list-item {
 			.item {
 				figure {
@@ -395,6 +401,178 @@
 								display: none;
 							}
 						}
+					}
+				}
+			}
+		}
+	}
+
+
+	.brand,
+	.quantity {
+		flex     : 0 0 100%;
+		max-width: 100%;
+		height   : 90px;
+	}
+
+	.brand {
+		border-right : 0;
+		border-bottom: 3px solid #ED1D24;
+
+		p {
+			font-size: 12px;
+		}
+
+		h3 {
+			font-size: 18px;
+		}
+	}
+
+	.quantity {
+		p {
+			font-size: 12px;
+		}
+	}
+
+	.detail-oil {
+
+		.brand-detail,
+		.info-car-detail {
+			flex     : 0 0 100%;
+			max-width: 100%;
+		}
+
+
+		.brand-detail {
+			border-right : 0;
+			border-bottom: 3px solid #ED1D24;
+			height       : 85px;
+
+			p {
+				flex     : 0 0 50%;
+				max-width: 50%;
+
+
+				text-align  : center;
+				flex-basis  : 0;
+				flex-grow   : 1;
+				padding-left: 30px;
+				font-size   : 12px;
+			}
+
+			ul {
+				padding      : 0;
+				padding-right: 30px;
+				flex         : 0 0 50%;
+				max-width    : 50%;
+
+				li {
+					font-size: 18px;
+
+					&:first-child {
+						max-height: 100px;
+						overflow  : hidden;
+					}
+				}
+			}
+		}
+
+		.info-car-detail {
+			height: 135px;
+
+			.list-1,
+			.list-2 {
+				padding-inline-start: 10px;
+
+				.item {
+					font-size  : 14px;
+					font-weight: 400;
+				}
+			}
+		}
+
+		.info-product {
+			padding: 20px 15px 0;
+
+			ul {
+				li {
+					h5 {
+						flex     : 0 0 50%;
+						max-width: 50%;
+					}
+
+					p {
+						flex     : 0 0 50%;
+						max-width: 50%;
+					}
+				}
+			}
+		}
+
+		.list-item {
+			padding-bottom: 35px;
+			padding-left  : 0px;
+			margin-left   : 0px;
+			margin-right  : 0px;
+
+			.item {
+				padding: 30px 15px 0;
+
+				figure {
+					figcaption {
+						padding-bottom: 25px;
+
+						h5,
+						p {
+							font-size: 12px;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media(max-width: 767px) {
+	.car-version {
+		.table-car_version {
+			padding: 0 15px;
+
+			.table-pc {
+				display: none;
+			}
+
+			.table-mb {
+				display: block;
+
+				.list-item {
+					margin-left : -15px;
+					margin-right: -15px;
+					padding     : 20px 0;
+
+					.item {
+						padding-bottom: 15px;
+						padding       : 0 15px;
+
+						h5 {
+							color      : #ED1D24;
+							font-size  : 14px;
+							font-weight: 700;
+						}
+
+						p {
+							font-size: 14px;
+							color    : #353535;
+						}
+
+						&:nth-child(2),
+						&:nth-child(1) {
+							padding-bottom: 15px;
+						}
+					}
+
+					&:nth-child(2n) {
+						background: #F2F2F2;
 					}
 				}
 			}
