--- a/src/pages/car-version.pug
+++ b/src/pages/car-version.pug
@@ -12,7 +12,7 @@ block main
 					include ../components/nav-left/nav-left.pug
 				//- DANH SÁCH XE HƠI
 				.col-lg-9
-					.block.text-center
+					.block.text-center.mt-mb-18
 						.brand
 							p Thương hiệu
 							h3 TOYOTA
@@ -21,7 +21,7 @@ block main
 							h3 140
 					.block.item-detail.mt-18
 						.table-car_version
-							table
+							table.table-pc
 								tr
 									th Phiên bản xe
 									th Năm sản xuất
@@ -87,3 +87,22 @@ block main
 										a(href="detail-oil.html") 2.4 2AZ-FE VVT-I
 									td
 										a(href="detail-oil.html") 2WD
+							.table-mb
+								-for(i=0; i<5;i++)
+									.row.list-item
+										.col-6.item
+											a(href="detail-oil.html")
+												h5 Phiên bản xe
+												p ACV30
+										.col-6.item
+											a(href="detail-oil.html")
+												h5 Động cơ
+												p 2.4 2AZ-FE VVT-I
+										.col-6.item
+											a(href="detail-oil.html")
+												h5 Năm sản xuất
+												p 2002-2006
+										.col-6.item
+											a(href="detail-oil.html")
+												h5 Hệ dẫn động
+												p 2WD
