--- a/src/pages/detail-oil.pug
+++ b/src/pages/detail-oil.pug
@@ -48,7 +48,7 @@ block main
 												h5 Tiêu chuẩn 1
 												p H-TECH100PLUS_0W20
 											.box-img
-												img(src="./img/detail-oil-01.png", alt="", srcset="")
+												img(src="https://motulvietnam.com/Upload/Product/b7ceda26-99d5-490b-8f4d-c40a9830a653/RS%20-%2053%20-%20300V%20FACTORY%20LINE%20ROAD%20RACING%2010W40%2012X1L.png", alt="", srcset="")
 					.block.item-detail.mt-18
 						h3.name-catalogs Dầu nhớt số sàn
 						.info-product
@@ -67,4 +67,4 @@ block main
 											h5 Tiêu chuẩn 1
 											p H-TECH100PLUS_0W20
 										.box-img
-											img(src="./img/detail-oil-04.png", alt="", srcset="")
+											img(src="https://motulvietnam.com/Upload/Product/b7ceda26-99d5-490b-8f4d-c40a9830a653/RS%20-%2053%20-%20300V%20FACTORY%20LINE%20ROAD%20RACING%2010W40%2012X1L.png", alt="", srcset="")
