--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -5,4 +5,4 @@
 @import "index.scss";
 @import "distribution-system/distribution-system.scss";
 @import "nav-left/nav-left.scss";
-@import "choose-oil.scss";
+@import "_choose-oil.scss";
