--- a/src/components/_core/core.scss
+++ b/src/components/_core/core.scss
@@ -12,6 +12,11 @@ body {
 	background-repeat  : no-repeat;
 }
 
+@font-face {
+	font-family: 'SEGOEUI';
+	src        : url('../fonts/SEGOEUI.TTF');
+}
+
 ::-webkit-scrollbar-track {
 	box-shadow        : inset 0 0 6px rgba(255, 255, 255, 0);
 	-webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0);
