--- a/src/components/distribution-system/distribution-system.scss
+++ b/src/components/distribution-system/distribution-system.scss
@@ -90,6 +90,31 @@
 					transform: translate(-50%, -50%);
 				}
 			}
+
+			&.form-select {
+				position: relative;
+
+				label {
+					pointer-events: none;
+					position      : absolute;
+					right         : 0;
+					top           : 0;
+					width         : 50px;
+					height        : 50px;
+					background    : #ED1D24;
+
+					&:after {
+						content: '';
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%,-50%);
+						border-left  : 8px solid transparent;
+						border-right : 8px solid transparent;
+						border-top: 9px solid #fff;
+					}
+				}
+			}
 		}
 	}
 
