--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -13,10 +13,10 @@
 
 		p {
 			font-family: 'SEGOEUI';
-			font-size : 18px;
-			color     : #000;
-			margin-top: 30px;
-			text-align: justify;
+			font-size  : 18px;
+			color      : #000;
+			margin-top : 30px;
+			text-align : justify;
 
 			&:nth-child(2) {
 				margin-top: 0;
@@ -49,7 +49,7 @@
 				}
 
 				span {
-					font-family: 'SEGOEUI';
+					font-family      : 'SEGOEUI';
 					font-size        : 14px;
 					font-weight      : 700;
 					color            : #ED1D24;
@@ -67,7 +67,7 @@
 				}
 
 				h5 {
-					font-family: 'SEGOEUI';
+					font-family    : 'SEGOEUI';
 					position       : relative;
 					text-align     : right;
 					padding-right  : 40px;
@@ -76,7 +76,7 @@
 					max-width      : 100%;
 					color          : #ED1D24;
 					font-size      : 14px;
-					font-weight: 400;
+					font-weight    : 400;
 
 					&::after {
 						content          : '';
@@ -97,14 +97,46 @@
 	}
 }
 
-@media(max-width: 1024px) {
+@media(max-width: 768px) {
+	.motul-oil {
+		.box-content {
+			padding: 30px;
+
+			p {
+				font-size: 12px;
+
+				&:nth-child(3) {
+					margin-right: 5%;
+				}
+			}
+
+			.box-title {
+				margin: 25px 30% 0 0;
+
+				a {
+					h1 {
+						font-size   : 25px;
+						padding-left: 10px;
+					}
+				}
+			}
+		}
+
+		.swiper-BannerCar {
+			margin-left : 0px;
+			margin-right: 0px;
+		}
+	}
+}
+
+@media(max-width: 480px) {
 	.motul-oil {
 		.box-content {
 			padding: 0px 7.5px 12px 7.5px;
 
 			img {
-				display   : block;
-				margin-top: -10px;
+				display: block;
+				margin : -10px auto 0;
 			}
 
 			p {
@@ -129,20 +161,19 @@
 					}
 
 					h5 {
-						font-size: 12px;
+						font-size  : 12px;
 						font-weight: 400;
 					}
 
 					h1 {
 						font-size   : 30px;
-							padding-left: 30px
+						padding-left: 30px
 					}
 				}
-
 			}
 		}
 
-		.col-lg-5 {
+		.col-md-5 {
 			display: none;
 		}
 	}
