--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,7 +9,7 @@ block main
 		.container
 			.block.size-9
 				.row
-					.col-lg-7.box-content
+					.col-md-7.col-sm-12.box-content
 						img(src="./img/img-banner-mobile.png", alt="")
 						p Mỗi dòng xe đều cần dầu nhớt chuyên dụng để phát huy tối đa công suất vận hành của động cơ.
 						p * Chọn thông tin của xe để tìm kiếm sản phẩm dầu nhớt MOTUL thích hợp nhất cho xe của bạn.
@@ -20,7 +20,7 @@ block main
 									br
 									|XE HƠI
 								h5 Danh sách sản phẩm
-					.col-lg-5
+					.col-md-5
 						.swiper-container.swiper-BannerCar
 							.swiper-wrapper
 								.swiper-slide
