--- a/src/components/nav-left/nav-left.scss
+++ b/src/components/nav-left/nav-left.scss
@@ -9,13 +9,15 @@ aside {
 	}
 
 	h3 {
-		color    : #000;
-		font-size: 24px;
+		padding-top: 35px;
+		color      : #000;
+		font-size  : 24px;
 	}
 
 	p {
-		font-size: 16px;
-		color    : #ED1D24;
+		font-size     : 16px;
+		color         : #ED1D24;
+		padding-bottom: 25px;
 	}
 
 	.box-search {
@@ -27,7 +29,7 @@ aside {
 			font-size    : 18px;
 			color        : #ED1D24;
 			font-weight  : 700;
-			margin-bottom: 15px;
+			margin-bottom: 10px;
 		}
 
 		.form-group {
@@ -37,6 +39,7 @@ aside {
 				font-size: 18px;
 				padding  : 10px;
 				width    : 100%;
+				height   : 43px;
 				border   : 1px solid #AFAFAF;
 			}
 
