--- a/src/pages/list-car.pug
+++ b/src/pages/list-car.pug
@@ -4,7 +4,7 @@ block var
 	- var title = 'Danh Sách Xe'
 	- var bodyClass = 'list-car-page'
 block main
-	section.list-car
+	section.section-list-car
 		.container
 			.row
 				//- MENU BÊN TRÁI
