--- a/src/pages/list-oil.pug
+++ b/src/pages/list-oil.pug
@@ -17,7 +17,7 @@ block main
 						.row.list-item
 							-for(i=0;i<12;i++)
 								.col-lg-4.col-6.item
-									a(href="")
+									a(href="#")
 										figure
 											figcaption
 												h5 H-TECH100PLUS_0W20
