--- a/src/pages/list-oil.pug
+++ b/src/pages/list-oil.pug
@@ -20,9 +20,9 @@ block main
 									a(href="#")
 										figure
 											figcaption
-												h5 H-TECH100PLUS_0W20
+												h5 H-TECH100PLUS_0W20 JELKDJFLKDJÁLKDJASLKDSAJLDKJASLKJLKAL
 											.box-img
-												img(src="./img/product_01.png", alt="")
+												img(src="https://motulvietnam.com/Upload/Product/b7ceda26-99d5-490b-8f4d-c40a9830a653/RS%20-%2053%20-%20300V%20FACTORY%20LINE%20ROAD%20RACING%2010W40%2012X1L.png", alt="")
 					.block.list-oil.mt-25
 						h3.name-catalogs Dầu nhớt số sàn
 						.row.list-item
@@ -33,7 +33,7 @@ block main
 											figcaption
 												h5 H-TECH100PLUS_0W20
 											.box-img
-												img(src="./img/product_02.png", alt="")
+												img(src="https://motulvietnam.com/Upload/Product/a613e6ce-6608-4a2c-ae5f-5f2a60af6777/RS%20-%2028%20-%20SCOOTER%20LE%204T%2010W4020X1L%20VN.png", alt="")
 					.block.list-oil.mt-25
 						h3.name-catalogs ATF / CVTF / DCTF
 						.row.list-item
@@ -44,4 +44,4 @@ block main
 											figcaption
 												h5 H-TECH100PLUS_0W20
 											.box-img
-												img(src="./img/product_04.png", alt="")
+												img(src="https://motulvietnam.com/Upload/Product/ba5ba8a4-934d-414b-9295-4ed8e68887d0/RS%20-%2019%20-%203000%20PLUS%204T%2020W50%2020X1L%20VN.png", alt="")
