--- a/src/components/nav-left/nav-left.pug
+++ b/src/components/nav-left/nav-left.pug
@@ -1,9 +1,10 @@
 aside
 	.block.text-center
-		h3 SẢN PHẨM
-			br
-			| THƯƠNG HIỆU
-		p Tên thương hiệu
+		.box-title-nav
+			h3 SẢN PHẨM
+				br
+				| THƯƠNG HIỆU
+			p Tên thương hiệu
 	.block.mt-18
 		.box-search
 			span Tìm tên xe hơi
