--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -6,3 +6,4 @@
 @import "distribution-system/distribution-system.scss";
 @import "nav-left/nav-left.scss";
 @import "_choose-oil.scss";
+@import "_search.scss";
