--- a/src/components/nav-left/nav-left.pug
+++ b/src/components/nav-left/nav-left.pug
@@ -6,11 +6,12 @@ aside
 				| THƯƠNG HIỆU
 			p Tên thương hiệu
 	.block.mt-18
-		.box-search
-			span Tìm tên xe hơi
-			.form-group
-				input(type="text" placeholder="Tìm...")
-				button
-					img(src="./img/icons/icon_search.png", alt="", srcset="")
+		form(action="search.html")
+			.box-search
+				span Tìm tên xe hơi
+				.form-group
+					input(type="text" placeholder="Tìm...")
+					button
+						img(src="./img/icons/icon_search.png", alt="", srcset="")
 	a.back-link(href="index.html")
 		.block.mt-18.back-button Quay Lại
