--- a/src/components/_search.scss
+++ b/src/components/_search.scss
@@ -79,9 +79,29 @@
 					border-bottom: 5px solid #ED1D24;
 				}
 
+				// &:nth-child(2) {
+				// 	td {
+				// 		padding-top: 30px;
+
+				// 		&::before {
+				// 			margin-top: 10px;
+				// 		}
+				// 	}
+				// }
+
+				// &:last-child {
+				// 	td {
+				// 		padding-bottom: 30px;
+
+				// 		&::before {
+				// 			margin-top: -10px;
+				// 		}
+				// 	}
+				// }
+
 				th {
 					text-align : center;
-					padding    : 20px 25px 20px 0;
+					padding    : 20px 0;
 					color      : #ED1D24;
 					font-size  : 18px;
 					font-weight: 700;
@@ -98,7 +118,8 @@
 
 				td {
 					position  : relative;
-					padding   : 10px 0;
+					width     : 20%;
+					padding   : 15px 0;
 					text-align: center;
 					font-size : 18px;
 
@@ -108,10 +129,15 @@
 						display   : block;
 					}
 
+					&:last-child {
+						a {
+							padding-right: 30px;
+						}
+					}
+
 					&:first-child {
 						text-align  : left;
 						padding-left: 50px;
-						width       : 25%;
 
 						a {
 							padding-left: 30px;
