--- a/src/pages/list-oil.pug
+++ b/src/pages/list-oil.pug
@@ -20,7 +20,7 @@ block main
 									a(href="#")
 										figure
 											figcaption
-												h5 H-TECH100PLUS_0W20 JELKDJFLKDJÁLKDJASLKDSAJLDKJASLKJLKAL
+												h5 H-TECH100PLUS_0W20
 											.box-img
 												img(src="https://motulvietnam.com/Upload/Product/b7ceda26-99d5-490b-8f4d-c40a9830a653/RS%20-%2053%20-%20300V%20FACTORY%20LINE%20ROAD%20RACING%2010W40%2012X1L.png", alt="")
 					.block.list-oil.mt-25
