--- a/src/components/nav-left/nav-left.pug
+++ b/src/components/nav-left/nav-left.pug
@@ -1,9 +1,7 @@
 aside
 	.block.text-center
 		.box-title-nav
-			h3 SẢN PHẨM
-				br
-				| THƯƠNG HIỆU
+			h3 XE HƠI
 			p Tên thương hiệu
 	.block.mt-18
 		form(action="search.html")
