--- a/src/components/_core/core.scss
+++ b/src/components/_core/core.scss
@@ -73,6 +73,12 @@ body {
 		}
 
 		@media(max-width: 1024px) {
+			.col-lg-6 {
+				&.menu {
+					padding: 20px 0;
+				}
+			}
+
 			border    : 3px solid #ED1D24;
 			height    : 38px;
 			margin-top: 10px;
