--- a/src/components/nav-left/nav-left.scss
+++ b/src/components/nav-left/nav-left.scss
@@ -85,19 +85,29 @@ aside {
 			display: none;
 		}
 
-		h3,
-		p {
-			flex     : 0 0 50%;
-			max-width: 50%;
-			padding  : 0;
-		}
+		.box-title-nav {
+			display  : flex;
+			flex-wrap: wrap;
+			width    : 100%;
+			padding  : 10px 0;
 
-		h3 {
-			font-size: 18px;
-		}
+			h3,
+			p {
+				flex      : 0 0 50%;
+				max-width : 50%;
+				padding   : 0;
+				align-self: center;
+			}
 
-		P {
-			font-size: 12px;
+			h3 {
+				order    : 2;
+				font-size: 18px;
+			}
+
+			P {
+				order    : 1;
+				font-size: 12px;
+			}
 		}
 
 		.box-search {
@@ -108,15 +118,15 @@ aside {
 			padding    : 5px;
 
 			span {
-				flex         : 0 0 30%;
-				max-width    : 30%;
+				flex         : 0 0 40%;
+				max-width    : 40%;
 				font-size    : 12px;
 				margin-bottom: 0;
 			}
 
 			.form-group {
-				flex     : 0 0 70%;
-				max-width: 70%;
+				flex     : 0 0 60%;
+				max-width: 60%;
 
 				input[type="text"] {
 					height   : 25px;
