--- a/src/components/_global/footer.scss
+++ b/src/components/_global/footer.scss
@@ -5,6 +5,13 @@ footer {
 		display: flex;
 		float  : left;
 
+		a {
+			img {
+				width : 165px;
+				height: 42px;
+			}
+		}
+
 		span {
 			align-self : flex-end;
 			margin-left: 10px;
@@ -24,6 +31,12 @@ footer {
 
 			.item {
 				padding-right: 30px;
+
+				a {
+					svg {
+						width: 70%;
+					}
+				}
 
 				&:last-child {
 					padding-right: 0;
@@ -57,6 +70,11 @@ footer {
 			.social-media {
 				margin-top     : 20px;
 				justify-content: center;
+				margin-left    : 26px;
+
+				.item {
+					padding-right: 20px;
+				}
 			}
 
 			span {
