--- a/src/components/_global/footer.scss
+++ b/src/components/_global/footer.scss
@@ -78,8 +78,9 @@ footer {
 			}
 
 			span {
-				margin-top: 10px;
-				display   : block;
+				margin-top : 10px;
+				display    : block;
+				margin-left: 0;
 			}
 		}
 	}
