--- a/src/components/_global/header_1.scss
+++ b/src/components/_global/header_1.scss
@@ -5,6 +5,7 @@
 	padding   : 15px 0;
 	background: #191919;
 	z-index   : 100;
+	height    : 70px;
 
 	&.active {
 		box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
@@ -16,7 +17,7 @@
 		display   : none;
 		position  : absolute;
 		right     : 35px;
-		bottom    : 16px;
+		bottom    : 7px;
 		width     : 43px;
 		height    : 38px;
 		cursor    : pointer;
@@ -116,6 +117,10 @@
 
 		.logo {
 			padding-left: 35px;
+
+			img {
+				width: 70%;
+			}
 		}
 
 		.list-menu {
@@ -125,7 +130,7 @@
 			margin-left: unset;
 			width      : 100%;
 			height     : 100vh;
-			top        : 90px;
+			top        : 70px;
 			left       : -100%;
 			transition : .3s all ease-in-out;
 
