--- a/src/components/_choose-oil.scss
+++ b/src/components/_choose-oil.scss
@@ -119,7 +119,7 @@
 .detail-oil {
 
 	.info-product {
-		padding: 40px 0 50px 80px;
+		padding: 40px 0 0 80px;
 
 		ul {
 			list-style          : none;
@@ -156,7 +156,8 @@
 		padding-bottom: 105px;
 
 		.item {
-			padding: 0 65px;
+			padding   : 0 65px;
+			margin-top: 40px;
 
 			figure {
 				figcaption {
@@ -343,9 +344,7 @@
 		.list-1,
 		.list-2 {
 			list-style          : none;
-			padding-inline-start: 75px;
-			flex                : 0 0 50%;
-			max-width           : 50%;
+			padding-inline-start: 30px;
 
 			.item {
 				font-size  : 16px;
@@ -355,12 +354,18 @@
 		}
 
 		.list-1 {
+			flex     : 0 0 40%;
+			max-width: 40%;
+
 			.item {
 				color: #ED1D24;
 			}
 		}
 
 		.list-2 {
+			flex     : 0 0 60%;
+			max-width: 60%;
+
 			.item {
 				color: #000;
 			}
@@ -530,9 +535,12 @@
 
 			.list-1,
 			.list-2 {
+				flex                : 0 0 50%;
+				max-width           : 50%;
 				padding-inline-start: 10px;
 
 				.item {
+					text-align : center;
 					padding    : 5px 0;
 					font-size  : 14px;
 					font-weight: 400;
