--- a/src/components/_choose-oil.scss
+++ b/src/components/_choose-oil.scss
@@ -43,7 +43,7 @@
 								background-image : url(../img/icons/next-arrows.png);
 								background-repeat: no-repeat;
 								background-size  : cover;
-								top              : 50%;
+								top              : 14px;
 								left             : 0;
 								width            : 26px;
 								height           : 26px;
