--- a/src/components/_core/core.scss
+++ b/src/components/_core/core.scss
@@ -5,11 +5,10 @@ body {
 }
 
 body {
-	background-image   : url('../img/background.png');
-	background         : #F2F2F2;
-	background-size    : cover;
-	background-position: center;
-	background-repeat  : no-repeat;
+	background         : #f2f2f2;
+	background-image   : url(../img/background.png);
+	background-position: 50%;
+	background-repeat  : repeat;
 }
 
 @font-face {
