--- a/src/components/_search.scss
+++ b/src/components/_search.scss
@@ -125,7 +125,7 @@
 
 					a {
 						color     : #353535;
-						word-break: break-all;
+						word-break: break-word;
 						display   : block;
 					}
 
