--- a/src/pages/search.pug
+++ b/src/pages/search.pug
@@ -36,7 +36,7 @@ block main
 								-for(i=0;i<15;i++)
 									tr
 										td
-											a(href="detail-oil.html") Camry
+											a(href="detail-oil.html") Camry Go Hutyrd
 										td
 											a(href="detail-oil.html") ACV30
 										td
