--- a/src/pages/car-version.pug
+++ b/src/pages/car-version.pug
@@ -30,7 +30,7 @@ block main
 								//- SẢN PHẨM 1
 								tr
 									td
-										a(href="detail-oil.html") ACV30
+										a(href="detail-oil.html") ACV30/ADASDAD/ADASDASDASDSAD
 									td
 										a(href="detail-oil.html") 2002-2006
 									td
