--- a/src/components/_choose-oil.scss
+++ b/src/components/_choose-oil.scss
@@ -15,6 +15,7 @@
 					display       : flex;
 					height        : 100%;
 					flex-direction: column;
+					width         : 100%;
 
 					.box-img {
 						margin-top: auto;
@@ -237,7 +238,6 @@
 				}
 
 				th {
-					text-align : center;
 					padding    : 20px 25px 20px 0;
 					color      : #ED1D24;
 					font-size  : 18px;
@@ -246,19 +246,24 @@
 					&:last-child {
 						padding: 0;
 					}
+
+					&:first-child {
+						padding: 20px 25px 20px 35px;
+					}
 				}
 
 				td {
-					position  : relative;
-					padding   : 10px 0;
-					text-align: center;
-					font-size : 18px;
+					position : relative;
+					padding  : 10px 0;
+					font-size: 18px;
 
 					a {
 						color: #353535;
 					}
 
 					&:first-child {
+						padding: 10px 0 10px 35px;
+
 						&::before {
 							content          : '';
 							position         : absolute;
@@ -266,7 +271,7 @@
 							background-repeat: no-repeat;
 							background-size  : cover;
 							top              : 50%;
-							left             : 40px;
+							left             : 10px;
 							width            : 18px;
 							height           : 18px;
 							transform        : translateY(-50%);
@@ -540,7 +545,6 @@
 				padding-inline-start: 10px;
 
 				.item {
-					text-align : center;
 					padding    : 5px 0;
 					font-size  : 14px;
 					font-weight: 400;
