--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -19,7 +19,8 @@
 			text-align : justify;
 
 			&:nth-child(2) {
-				margin-top: 0;
+				margin-top  : 0;
+				margin-right: 15%;
 			}
 
 			&:nth-child(3) {
@@ -28,11 +29,12 @@
 		}
 
 		.box-title {
-			width           : 420px;
+			position        : relative;
+			width           : 400px;
 			margin          : 50px 30% 0 0;
 			display         : flex;
 			flex-wrap       : wrap;
-			padding         : 15px 10px;
+			padding         : 5px 10px;
 			border          : 5px solid #000;
 			background-image: url(../img/bg-box-banner.png);
 
@@ -42,29 +44,33 @@
 				display  : flex;
 
 				h1 {
-					flex       : 0 0 90%;
-					max-width  : 90%;
-					font-size  : 45px;
-					font-weight: 700;
-					color      : #000;
+					flex        : 0 0 90%;
+					max-width   : 90%;
+					font-size   : 45px;
+					font-weight : 700;
+					color       : #000;
+					padding-left: 50px;
+					line-height : 1.4;
 				}
 
 				span {
-					font-family      : 'SEGOEUI';
-					font-size        : 14px;
-					font-weight      : 700;
-					color            : #ED1D24;
-					display          : inline-block;
-					text-align       : center;
-					flex             : 0 0 10%;
-					max-width        : 10%;
-					-webkit-transform: rotate(-180deg);
-					-moz-transform   : rotate(-180deg);
-					-ms-transform    : rotate(-180deg);
-					-o-transform     : rotate(-180deg);
-					transform        : rotate(-180deg);
-					writing-mode     : vertical-rl;
-					text-orientation : sideways;
+					position        : absolute;
+					line-height     : 1;
+					padding-left    : 10px;
+					top             : 50%;
+					left            : 0;
+					height          : 100%;
+					font-family     : 'SEGOEUI';
+					font-size       : 14px;
+					font-weight     : 700;
+					color           : #ED1D24;
+					display         : inline-block;
+					text-align      : center;
+					flex            : 0 0 10%;
+					max-width       : 10%;
+					transform       : translateY(-50%) rotate(-180deg);
+					writing-mode    : vertical-rl;
+					text-orientation: sideways;
 				}
 
 				h5 {
